fix: vertical-align

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -28,7 +28,7 @@ button {
 
 .cards {
   background-image: url(../../../public/assets/bg.png);
-  height: 100vh;
+  min-height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -38,6 +38,11 @@ button {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 10px;
+
+  position: relative;
+  top: 50%;
+  transform: translateY(50%);
+  padding-bottom: 10px;
 }
 
 .cards__title {
@@ -56,5 +61,17 @@ button {
   justify-content: center;
   flex-wrap: wrap;
   gap: 80px;
+}
+
+@media screen and (max-width: 820px) {
+  .cards__container {
+    gap: 40px;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .container {
+    transform: translateY(0);
+  }
 }
 
